--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -17,7 +17,8 @@
         "back": "Back",
         "edit": "Edit",
         "blue": "Blue",
-        "red": "Red"
+        "red": "Red",
+        "next": "Next"
     },
     "companies": {
         "phones": "Phones",
