--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -17,7 +17,8 @@
         "back": "Retour",
         "edit": "Modifier",
         "blue": "Bleu",
-        "red": "Rouge"
+        "red": "Rouge",
+        "next": "Suivant"
     },
     "companies": {
         "phones": "Téléphones",
