--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -20,6 +20,32 @@
         "red": "Red",
         "next": "Next"
     },
+    "customers": {
+        "customers": "Customers",
+        "no_customers": "There are no customers in this category",
+        "com_name": "Trade name",
+        "legal_name": "Legal name",
+        "vat_number": "VAT number",
+        "email": "Email",
+        "web": "Website",
+        "language": "Language",
+        "add_customer": "Add Customer",
+        "default_vat": "Default VAT",
+        "invocing_method": "Invoice delivery method",
+        "default_withholding": "Default withholding",
+        "pay_method": "Payment method",
+        "duedate": "Due date",
+        "europe": "European",
+        "enabled": "Enabled",
+        "detail": "Customer detail",
+        "confirm_delete": "Do you want to delete this customer?",
+        "vat": "VAT",
+        "withholding": "Withholding",
+        "yes": "Yes",
+        "no": "No",
+        "contacts": "Contacts",
+        "schemes": "Schemes"
+    },
     "companies": {
         "phones": "Phones",
         "addresses": "Address",
@@ -77,10 +103,19 @@
         "edit_disabled": "Not available for Demo Mode",
         "deleting_phone": "Error deleting Phone",
         "deleting_account": "Error deleting Bank Account",
+        "deleting_contact": "Error deleting Contact",
+        "deleting_scheme": "Error deleting Scheme",
+        "editing_scheme": "Error editing Scheme",
         "invalid_duedate": "The payment term must be a number",
         "invalid_default_vat": "The VAT value must be a number",
-        "invalid_default_withholding": "The withholding value must be a number"
-
+        "invalid_default_withholding": "The withholding value must be a number",
+        "invalid_discount": "The discount value must be a number",
+        "invalid_price": "The price value must be a number"
+    },
+    "languages": {
+        "es": "Spanish",
+        "fr": "French",
+        "en": "English"
     },
     "login": {
         "title": "Login",
@@ -127,7 +162,7 @@
         "state": "State/Province",
         "country": "Country"
     },
-        "users": {
+    "users": {
         "admin": "Administrator",
         "accounting": "Finance",
         "user": "User",
