--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -38,6 +38,8 @@
     },
     "customers": {
         "customers": "Clientes",
+        "all_customers": "Todos los clientes",
+        "customer": "Cliente",
         "no_customers": "No hay clientes en esta categoría",
         "com_name": "Nombre comercial",
         "legal_name": "Nombre fiscal",
@@ -76,6 +78,8 @@
         "providers": "Proveedores",
         "create": "Crear",
         "orders": "Pedidos",
+        "orders_customers": "Pedidos Clientes",
+        "orders_providers": "Pedidos Proveedores",
         "customer_invoices": "Facturas cliente",
         "provider_invoices": "Facturas proveedor",
         "quotes": "Presupuestos",
@@ -109,6 +113,8 @@
         "saving_user": "Error al guadar el usuario",
         "saving_phone": "Error al guadar el teléfono",
         "saving_account": "Error al guadar la cuenta bancaria",
+        "saving_customer": "Error al guadar el cliente",
+        "saving_provider": "Error al guadar el proveedor",
         "email_invalid": "Email no válido",
         "url_invalid": "Dirección web no válida",
         "edit_disabled": "No disponible en modo demo",
@@ -116,12 +122,19 @@
         "deleting_account": "Error al eliminar la cuenta bancaria",
         "deleting_contact": "Error al eliminar el contacto",
         "deleting_scheme": "Error al eliminar el esquema",
+        "deleting_order": "Error al eliminar el pedido",
         "editing_scheme": "Error al editar el esquema",
+        "editing_customer": "Error al editar el cliente",
+        "editing_provider": "Error al editar el proveedor",
+        "editing_order": "Error al editar el pedido",
         "invalid_duedate": "El plazo de pago debe ser un número",
         "invalid_default_vat": "El valor del IVA debe ser un número",
         "invalid_default_withholding": "El valor de la retención debe ser un número",
         "invalid_discount": "El valor del descuento debe ser un número",
-        "invalid_price": "El valor del precio debe ser un número"
+        "invalid_qty": "El valor de la cantidad debe ser un número",
+        "invalid_price": "El valor del precio debe ser un número",
+        "no_customer_selected": "Tiene que seleccionar un cliente",
+        "order_without_items": "El total del pedido debe ser > 0."
     },
     "languages": {
         "es": "Español",
@@ -142,13 +155,60 @@
         "dashboard": "Dashboard",
         "register": "Registro"
     },
-    "phones":{
+    "orders": {
+        "edit_order": "Modificar Pedido",
+        "add_order": "Añadir Pedido",
+        "select_customer": "Elige un cliente",
+        "orders_customers": "Pedidos Clientes",
+        "name": "Descripción",
+        "price": "Precio Unitario",
+        "units": "Unidades",
+        "field": "Sector",
+        "sourceLanguage": "Idioma de origen",
+        "targetLanguage": "Idioma de destino",
+        "items": "Líneas",
+        "descrip": "Descripción",
+        "discount": "Descuento",
+        "date": "Fecha",
+        "total": "Total",
+        "no_orders": "No hay pedidos en esta categoría",
+        "confirm_delete": "Quieres eliminar este pedido?",
+        "all": "Todos",
+        "pending": "Sin facturar",
+        "billed": "Facturados",
+        "quantity": "Cantidad"
+    },
+    "phones": {
         "phone_number": "Número",
         "kind": "Tipo",
         "no_phones": "No hay teléfonos para esta empresa",
         "add_phone": "Añadir teléfono",
         "edit_phone": "Modificar teléfono",
         "confirm_delete" : "¿Quieres eliminar este teléfono?"
+    },
+    "providers": {
+        "providers": "Proveedores",
+        "no_providers": "No hay proveedores en esta categoría",
+        "com_name": "Nombre comercial",
+        "legal_name": "Nombre fiscal",
+        "vat_number": "CIF",
+        "email": "Email",
+        "web": "Web",
+        "language": "Idioma",
+        "add_provider": "Añadir proveedor",
+        "default_vat": "IVA por defecto",
+        "default_withholding": "Retención por defecto",
+        "duedate": "Plazo de pago",
+        "europe": "Europeo",
+        "enabled": "Activo",
+        "detail": "Detalle del proveedor",
+        "confirm_delete": "¿Quieres eliminar este proveedor?",
+        "vat": "IVA",
+        "withholding": "Retención",
+        "yes": "Sí",
+        "no": "No",
+        "contacts": "Contactos",
+        "schemes": "Esquemas"
     },
     "register": {
         "title": "Registro",
@@ -174,6 +234,7 @@
     },
     "schemes": {
         "add_scheme": "Añadir Esquema",
+        "select_scheme": "Elige un esquema",
         "name":"Nombre",
         "price": "Precio",
         "units": "Unidades",
